# ft-allowance-agent

./: .gitignore  Dockerfile  GLOBAL_CONTRACT_WORKFLOW.md  LICENSE  Makefile  README.md  docker-compose.yml  milestone-2.md  milestone-3.md  rust-toolchain.toml
.github/workflows/: python-lint.yml  rust-build-docker.yml  rust-build.yml
0.0.1/: README.md  agent.py  manual_tests.py  metadata.dev.json  metadata.json  metadata.prod.json  milestone-1.md  pyproject.toml  requirements.dev.txt  requirements.txt  test_prompts.md
0.0.1/migrations/: env.py
0.0.1/migrations/versions/: d70c7cf27a2b_create_users_table.py
0.0.1/src/: Cargo.toml  actions.rs  auth_proxy.rs  client.py  common.py  deploy.sh  fewshots.py  log_adapter.py  logger_config.py  models.py  models.rs  serializer.rs  submit_txn.sh  utils.py  utils.rs
0.0.1/src/clients/: client.py  models.py
0.0.1/src/models/: db.py  user.py
0.0.1/src/scripts/: add_authorized_agent.sh  create_sub_account.sh  deploy.sh  derive_mpc_key.sh  notes.txt  request_signature.sh  submit_txn.sh
0.0.1/src/services/: user.py
0.0.1/src/tests/: integration_tests.rs  proxy_test.rs  unit_tests.rs
contracts/: Cargo.toml  README.md  actions.rs  auth_proxy.rs  build.sh  build_auth_proxy.sh  integration_tests.rs  models.rs  request_siggy.sh  submit_txn.sh  test-docker.sh  test.sh  unit_tests.rs  utils.rs
contracts/factory/: Cargo.toml  factory-deploy.sh  factory.rs  unit_tests.rs
contracts/scripts/: create_sub_account.sh  deploy.sh  factory-deploy.sh  test.sh
contracts/tests/: integration_tests.rs  unit_tests.rs
