[package]
name = "proxy-contract"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT"


[lib]
crate-type = ["cdylib", "rlib"]
name = "proxy_contract"
path = "auth_proxy.rs"


[dependencies]
near-sdk = {version = "5.14.0", features = ["unit-testing", "unstable", "legacy"] }
near-contract-standards = "5.14.0"
near-gas = "0.3.0"
borsh = "1.5.1"
borsh-derive = "1.5.1"
serde = { version = "1.0.214", features = ["derive"] }
omni-transaction = "0.2.1"
sha2 = "0.10.8"
serde_json = "1.0"
hex = "0.4.3"
schemars = "0.8.22"
bs58 = "0.5.1"
near-account-id = "=1.0.0"
once_cell = "1.21.3"


[dev-dependencies]
near-workspaces = "0.20.1"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
