[package]
name = "proxy-factory"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
name = "proxy_factory"
path = "factory.rs"

[dependencies]
near-sdk = { version = "5.17.2", features = ["unit-testing", "unstable", "global-contracts"] }
hex = "0.4.3"
bs58 = "0.5"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
